# dummy_chess

./: README.md
Log/: OrbbecSDK.log.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_pkg/lib/my_robot_pkg/: arm_move  chess_vision_node  gui
install/my_robot_pkg/share/my_robot_pkg/: package.sh  package.xml
install/my_robot_pkg/share/my_robot_pkg/launch/: chess_test.launch.py  demo.launch.py
install/my_robot_pkg_msg/share/my_robot_pkg_msg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot_pkg_msg/share/my_robot_pkg_msg/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_robot_pkg_msg__rosidl_generator_cExport.cmake  export_my_robot_pkg_msg__rosidl_generator_pyExport-noconfig.cmake  export_my_robot_pkg_msg__rosidl_generator_pyExport.cmake  export_my_robot_pkg_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_robot_pkg_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_robot_pkg_msg__rosidl_typesupport_fastrtps_cppExport.cmake  my_robot_pkg_msgConfig.cmake  my_robot_pkg_msg__rosidl_typesupport_cExport-noconfig.cmake  my_robot_pkg_msg__rosidl_typesupport_cExport.cmake  (+6 more)
log/: latest_build
src/my_robot_pkg/my_robot_pkg/: package.xml  setup.py
src/my_robot_pkg/my_robot_pkg/launch/: demo.launch.py
src/my_robot_pkg/my_robot_pkg/my_robot_pkg/: arm_move.py  chess_vision_node.py  gui.py
src/my_robot_pkg/my_robot_pkg_msg/: CMakeLists.txt
(+17 files in other folders)
